2006-11-04  Jean-Christophe Baillie  <baillie@gostai.com>

	update NEWS 
	* NEWS: update.

2006-11-04  Jean-Christophe Baillie  <baillie@gostai.com>

The simple code "event b" was creating both an event b[0] and a variable b.
This is now fixed.

	fix bug in declaration of events without parameters 
	* src/ucommand.cc: add the "events" keyword that can be used to list
        declared events (like vars for variables).
	* src/parser/bison/utoken.l: add events keyword.
	* src/ueventhandler.h: add a nbarg accessor.
	* src/ueventhandler.cc: idem.

2006-11-04  Jean-Christophe Baillie  <baillie@gostai.com>

	fix speedmax bug 
	* src/ucommand.cc: enforce speedmax on instantaneus assignments like
        x=<value> and display a warning message when the +error flag is set.

2006-11-04  Jean-Christophe Baillie  <baillie@gostai.com>

	change 'modificator' to 'modifier' 
	* src/ucommand.cc: change error messages to display 'modifier' instead
        of 'modificator'.

2006-11-04  Jean-Christophe Baillie  <baillie@gostai.com>

	fix string unarmor bug 
	* src/parser/bison/utoken.l: STRING token now calls UString::unArmor().
	* src/ustring.cc: add unArmor/armor (armor not implemented yet).
	* src/ustring.h: add defs.
	* src/uvalue.cc: change UValue::echo for DATA_STRING; no processing
        required anymore.

2006-11-04  Akim Demaille  <akim@lrde.epita.fr>

	Automake 1.10 compatibility
	* src/Makefile.am: Use init.mk.
	Use newer svn-externals.
	* configure.ac: Automake 1.10 includes $(SHELL) in $(install_sh),
	so do not add another.

2006-11-03  Jean-Christophe Baillie  <baillie@gostai.com>

	whenever support add, fix bug in at (forgot to call normalForm) 

	* src/ucommand.cc: add support for whenever.
	* src/ucommand.h: add support for whenever.
	* src/userver.cc: remove unecessary debug ouput.

2006-11-01  Akim Demaille  <akim@lrde.epita.fr>

	Use URBI_LIBPORT
	* configure.ac: Here.

2006-11-01  Jean-Christophe Baillie  <baillie@gostai.com>

	fix "exec" bug 
